# ExporterAC

./: .gitignore  License.txt  README.md
AcettoCorsa/: CMakeLists.txt  acetto corsa.sln  build.py
AcettoCorsa/AutomationExportExample/: FBX.cpp  FBX.h  Mesh.cpp  Mesh.h
AcettoCorsa/Include/: AuCarExport.h  AutomationExportExample.h  ExportManager.h  Mesh.h  dllmain.h  fbx.h
AcettoCorsa/src/: AutomationExportExample.vcxproj  AutomationExportExample.vcxproj.filters  ExportManager.cpp  Mesh.cpp  dllmain.cpp  fbx.cpp  fbx_test.cpp
AutomationExportExample/AutomationExportExample/: RCa26160
acetto corsa/AutomationExportExample/: AutomationExportExample.vcxproj  AutomationExportExample.vcxproj.filters  ExportManager.cpp  ExportManager.h  dllmain.cpp
